# Fair-Squares-V2.0

./: Cargo.toml  README.md
pallets/roles/: Cargo.toml
